--- a/config.toml
+++ b/config.toml
@@ -1,96 +1,36 @@
 baseURL = "https://olehmarshev.com/"
-title = "Minimo"
-# for smart copyright line, leave this blank and check [params.copyright]
-copyright = ""
+theme = "cocoa-eh"
 
-theme = "minimo"
-
-disqusShortname = ""
-googleAnalytics = ""
-
-Paginate = 5
-preserveTaxonomyNames = true
-
-enableRobotsTXT = true # generate robots.txt
-
-# Syntax Highlighting ( https://gohugo.io/content-management/syntax-highlighting/ )
-pygmentsCodefences = true
-
-# Missing translations will default to this content language
-defaultContentLanguage = "en"
-
-[params.info]
-description = "Minimalist theme for Hugo"
-title404 = "Nothing's here!"
-
-[params.assets]
-favicon = "favicon.ico"
-customCSS = ["css/custom.css"]
-customJS = ["js/custom.js"]
-gopher = "" # used in 404 template ( Generator: https://gopherize.me )
-
-[params.copyright]
-prefix = ""
-holder = "MunifTanjim"
-startYear = "2017"
-suffix = ""
-
-[params.settings]
-# date & time format: https://golang.org/pkg/time/
-dateFormat = "2006, Jan 02"
-listDateFormat = "2006, Jan 02"
-hideEntryNavigation = ["page"] # boolean / array of sections
-recentPostsLength = 4
-hideSocialMenu = false
-showReadingTime = true
-noTermCloudShuffle = false
-homepageSections = ["recent_posts"]
-
-[params.opengraph.facebook]
-admins = [] # array of Facebook IDs
-appID = ""
-pageID = ""
-
-[params.opengraph.twitter]
-page = "" # Twitter page username
-
-[params.seo]
-# Title Separator: - – — · • * ⋆ | ~ « » < >
-titleSeparator = "•"
-
-[params.social]
-codepen = "MunifTanjim"
-email = "contact@example.com"
-facebook = "MunifTanjim"
-github = "MunifTanjim"
-instagram = "MunifTanjim"
-linkedin = "muniftanjim"
-twitter = "MunifTanjim"
-telegram = "MunifTanjim"
-
-[params.social.config]
-platforms = ["github","facebook","twitter","instagram","email","codepen","linkedin","telegram"]
-
-[taxonomies]
-author = "authors"
-category = "categories"
-tag = "tags"
+builddrafts = false
+canonifyurls = true
+contentdir = "content"
+languageCode = "en-US"
+layoutdir = "layouts"
+publishdir = "public"
+author = ""
+title = "Oleh Marshev"
+disqusshortname = ""
+pluralizelisttitles = false
 
 [permalinks]
-page = "/:slug/"
+blog = "blog/:slug/"
 
-[[menu.main]]
-name = "Repo"
-weight = -10
-identifier = "repository"
-url = "https://github.com/MunifTanjim/minimo"
-
-[blackfriday]
-hrefTargetBlank = true
-
-[languages]
-# edit this block for your own language
-[languages.en]
+[params]
+dateform = "Jan 2, 2006"
+dateformfull = "Mon Jan 2 2006 15:04:05 MST"
+description = "Some thoughts"
+copyright = "Copyright © 2018"
+logofile = "img/logo.png"
+faviconfile = "img/logo.png"
+latestpostcount = 5
+highlightjs = true
+progressively = true
+align_left = false
 lang = "en"
-languageName = "English"
-weight = 1
+github = "olmar"
+email = "oleh.marshev@gmail.com"
+linkedin = "olegmarshev"
+twitter = "OlegMarshev"
+social_banner = "img/banner.png"
+posts_navigation = true
+small_banner_logo = false
