--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "themes/cocoa-eh"]
 	path = themes/cocoa-eh
 	url = https://github.com/mtn/cocoa-eh-hugo-theme
+[submodule "themes/coder"]
+	path = themes/coder
+	url = https://github.com/luizdepra/hugo-coder.git
