Use kiera theme

--- a/config.toml
+++ b/config.toml
@@ -1,34 +1,23 @@
 baseurl = "https://olehmarshev.com/"
 title = "Oleh Marshev"
-theme = "coder"
+copyright = "Copyright &copy; 2018 - Oleh Marshev"
+canonifyurls = true
+theme = "kiera"
 
-[params] # theme parameters
-    author = "Oleh Marshev" # author's name
-    info = "Some thoughts" # author's job title or info
-    description = "John Doe's personal website" # site description
-    keywords = "blog,developer,engineering" # site keywords
+paginate = 3
 
-# Social links
-[[params.social]]
-    name = "Github"
-    weight = 1
-    url = "https://github.com/olmar/"
-[[params.social]]
-    name = "Twitter"
-    weight = 2
-    url = "https://twitter.com/OlegMarshev/"
-[[params.social]]
-    name = "LinkedIn"
-    weight = 3
-    url = "https://www.linkedin.com/in/olegmarshev/"
+summaryLength = 30
+enableEmoji = true
+pygmentsCodeFences = true
 
-# Menu links
-[[menu.main]]
-    name = "Blog"
-    weight = 1
-    url  = "/blog/"
+[author]
+    name = ""
+    github = "olmar"
+    gitlab = ""
+    linkedin = "olegmarshev"
+    facebook = ""
+    twitter = "OlegMarshev"
+    instagram = ""
 
-#[[menu.main]]
-#    name = "About"
-#    weight = 2
-#    url = "/about/"
+[params]
+    tagline = "Some thoughts"
