--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/kiera"]
 	path = themes/kiera
 	url = https://github.com/avianto/hugo-kiera.git
+[submodule "public"]
+	path = public
+	url = git@github.com:olmar/olmar.github.io.git
+	branch = master
